--- a/store/assets/sass/Components/_cart.scss
+++ b/store/assets/sass/Components/_cart.scss
@@ -2,14 +2,18 @@
     padding: 0 10px;
     background: transparent;
     border: unset;
-    position: relative;
+    text-align: left;
+
+    .header__cart-icon {
+        position: relative;
+    }
 
     .cart-count {
         color: #fff;
         position: absolute;
         top: -12px;
-        left: 20px;
-        font-size: 13px;
+        left: 11px;
+        font-size: 11px;
         font-weight: 700;
     }
 }
