--- a/store/assets/sass/Components/_product.scss
+++ b/store/assets/sass/Components/_product.scss
@@ -1,35 +1,40 @@
+.filter {
+    padding: 15px;
+    background-color: #fbfbfb;
+}
+
 .product-card img {
     width: 100%;
     height: auto;
-  }
-  
-  .product-card h2 {
+}
+
+.product-card h2 {
     margin: 10px 0;
-    font-size:  1.7em;
-  }
-  
-  .product-card h3{
+    font-size: 1.7em;
+}
+
+.product-card h3 {
     margin: 10px 0;
     color: red;
     font-size: 25px;
-  }
-  
-  .product-card p{
+}
+
+.product-card p {
     margin: 5px 0;
     text-align: center;
-    
-  }
+}
 
-  .product-item {
+.product-item {
     max-width: 1200px;
     margin: auto;
     padding-top: 1rem;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-  }
-  
-  .product-card {
+    background-color: #fbfbfb;
+}
+
+.product-card {
     box-shadow: 0 8px 3px #c5c4c4;
     background-color: #fff;
     padding: 15px;
@@ -44,5 +49,4 @@
     flex-direction: column;
     justify-content: space-between;
     place-self: center;
-  }
-  
+}
